<resources>
    <string name="app_name">Jogo da Forca</string>
    <string name="letras_erradas">Letras Erradas</string>
    <string name="insira_seu_palpite">insira seu palpite...</string>
    <string name="enviar">Enviar</string>
    <string name="voc_tem_mais">Você ainda tem</string>
    <string name="palpite_incorreto">Palpite Incorreto :(</string>
    <string name="perdeu_o_jogo">você perdeu o jogo!</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="iniciar">INICIAR</string>
    <string name="jogo_da_forca">JOGO DA FORCA</string>
</resources>